--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import './../node_modules/bootstrap/dist/css/bootstrap.min.css';
+
+body {
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.container {
+    margin-left: 5%;
+    margin-right: 5%;
+}
