--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+<div class="mygrid">
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="card">ABC</div>
+    </div>
+
+    <div class="col-sm-6">
+      <div class="card">
+        <img class="img-rounded" src="../pictures/Pic1.jpg" alt="My Picture">
+      </div>
+    </div>
+  </div>
+</div>
