--- a/src/app/seller-auth/seller-auth.component.html
+++ b/src/app/seller-auth/seller-auth.component.html
@@ -8,4 +8,7 @@
         <button class="seller-signupbutton">Sign Up</button>
 
     </form>
+    <div class="card">
+        {{response}}
+    </div>
 </div>
